--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+
+  .content {
+    padding: 1% 0;
+    width: 100%;
+  }
 }
 
 .App-logo {
