--- a/src/components/table/table.scss
+++ b/src/components/table/table.scss
@@ -7,11 +7,12 @@
     color: white;
     margin-bottom: 0;
     border-radius: 1.5em;
+    width: 90%;
     table {
         width: 100%;
         th {
             background-color: #0278ae;
-            padding: 2%;
+            padding: 1.5% 1%;
             position: sticky;
             font-size: 1.2rem;
         }
@@ -20,6 +21,7 @@
                 background-color: #fff!important;
             }
             td {
+                font-size: 1rem;
                 cursor: pointer;
                 transition: ease 0.5s;
                 color: black;
